# hc-risk-chatbot

./: .gitignore  Makefile  QUICKSTART.md  README.md  chainlit.md  docker-compose.yml  fix_text_columns.sql  pyproject.toml
config/: .env.example
db/init/: 01_create_tables.sql  02_load_tables.sql  03_load_features.sql  feature_schema.sql
docs/: DEPLOYMENT.md  Datapipeline.md
models/baseline/: baseline_metadata.json  baseline_model.pkl  baseline_predictions.csv  feature_names.txt
models/tuned/: tuned_lgbm_model.pkl  tuned_lgbm_model_feature_importance.csv  tuned_lgbm_model_feature_names.txt  tuned_lgbm_model_metadata.json
notebooks/eda/: 01_initial_exploration.ipynb  02_anomaly_outlier_detection.ipynb  03_feature_engineering.ipynb
notebooks/training/: 01_baseline_models.ipynb  02_hyperparameter_tuning.ipynb
services/airflow/: Dockerfile  requirements.txt
services/airflow/dags/: README.md  feature_engineering_pipeline.py
services/chainlit/: Dockerfile  app.py  chainlit.toml  requirements.txt
services/chatbot/: ANALYSIS_WORKFLOW.md  Dockerfile  README.md  requirements.txt
services/chatbot/app/: analysis_graph.py  analysis_nodes.py  analysis_state.py  analysis_streaming.py  cache.py  chart_tools.py  graph.py  main.py  multimodal.py  tools.py
services/feast/: Dockerfile  README.md  requirements.txt
services/feast/feature_repo/: README.md  __init__.py  (+1 more)
services/frontend/: Dockerfile  next.config.mjs  package.json
services/model_serving/: Dockerfile  docker-compose.yml  requirements.txt  test_api.py
services/streamlit/: Dockerfile  app.py  charts.py
(+43 files in other folders)
