[project]
name = "hc-risk-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-providers-http>=5.4.0",
    "apache-airflow-providers-postgres>=6.4.0",
    "apache-airflow-providers-redis>=4.3.2",
    "fastapi>=0.121.2",
    "feast[postgres,redis]>=0.57.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars[pyarrow]>=1.35.2",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=21.0.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "redis>=4.6.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.51.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.34.0",
]
